improve date-time fields ["null", "string"] -> "string"
Signed-off-by: Sergey Chvalyuk <grubberr@gmail.com>

--- a/airbyte-integrations/connectors/source-github/source_github/schemas/releases.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/releases.json
@@ -94,11 +94,11 @@
             "type": ["null", "integer"]
           },
           "created_at": {
-            "type": ["null", "string"],
+            "type": "string",
             "format": "date-time"
           },
           "updated_at": {
-            "type": ["null", "string"],
+            "type": "string",
             "format": "date-time"
           },
           "uploader_id": {
