--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -14808,7 +14808,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-square:0.2.1"
+- dockerImage: "airbyte/source-square:0.2.2"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/square"
     connectionSpecification:
@@ -14881,7 +14881,8 @@
           title: "Start Date"
           default: "2021-01-01"
           pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
-          order: 2
+          order: "2,"
+          format: "date"
         include_deleted_objects:
           type: "boolean"
           description: "In some streams there is an option to include deleted objects\
