--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -13644,7 +13644,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-salesforce:2.0.7"
+- dockerImage: "airbyte/source-salesforce:2.0.9"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/salesforce"
     connectionSpecification:
@@ -13692,7 +13692,7 @@
           title: "Start Date"
           description: "Enter the date in the YYYY-MM-DD format. Airbyte will replicate\
             \ the data added on and after this date. If this field is blank, Airbyte\
-            \ will replicate all data."
+            \ will replicate the data for last two years."
           type: "string"
           pattern: "^([0-9]{4}-[0-9]{2}-[0-9]{2}(T[0-9]{2}:[0-9]{2}:[0-9]{2}Z)?)$"
           examples:
