--- a/airbyte-integrations/connectors/source-sentry/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-sentry/acceptance-test-config.yml
@@ -1,32 +1,32 @@
 acceptance_tests:
   basic_read:
     tests:
-    - config_path: secrets/config.json
-      timeout_seconds: 1200
-      expect_records:
-        path: "integration_tests/expected_records.jsonl"
-        extra_fields: no
-        exact_order: no
-        extra_records: yes
-      empty_streams:
-        - name: "events"
-          bypass_reason: "Data reset after some time"
-        - name: "issues"
-          bypass_reason: "Data reset after some time"
-      ignored_fields:
-        project_detail:
-        - name: features
-          bypass_reason: "Order features return randomly"
-        - name: organization/features
-          bypass_reason: "Order features return randomly"
-        - name: plugins/*/features
-          bypass_reason: "Order features return randomly"
-        projects:
-        - name: features
-          bypass_reason: "Order features return randomly"
-        - name: organization/features
-          bypass_reason: "Order features return randomly"
-      fail_on_extra_columns: false
+      - config_path: secrets/config.json
+        timeout_seconds: 1200
+        expect_records:
+          path: "integration_tests/expected_records.jsonl"
+          extra_fields: no
+          exact_order: no
+          extra_records: yes
+        empty_streams:
+          - name: "events"
+            bypass_reason: "Data reset after some time"
+          - name: "issues"
+            bypass_reason: "Data reset after some time"
+        ignored_fields:
+          project_detail:
+            - name: features
+              bypass_reason: "Order features return randomly"
+            - name: organization/features
+              bypass_reason: "Order features return randomly"
+            - name: plugins/*/features
+              bypass_reason: "Order features return randomly"
+          projects:
+            - name: features
+              bypass_reason: "Order features return randomly"
+            - name: organization/features
+              bypass_reason: "Order features return randomly"
+        fail_on_extra_columns: false
   connection:
     tests:
       - config_path: secrets/config.json
@@ -53,4 +53,4 @@ acceptance_tests:
     tests:
       - spec_path: source_sentry/spec.json
 connector_image: airbyte/source-sentry:dev
-test_strictness_level: low
+test_strictness_level: high
