--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -15064,7 +15064,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-stripe:3.0.4"
+- dockerImage: "airbyte/source-stripe:3.0.5"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/stripe"
     connectionSpecification:
@@ -15097,6 +15097,7 @@
             \ data generated after this date will be replicated."
           examples:
           - "2017-01-25T00:00:00Z"
+          format: "date-time"
           order: 2
         lookback_window_days:
           type: "integer"
