Fix marketo, close, chargebee, facebook, paystack

--- a/airbyte-integrations/connectors/source-marketo/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-marketo/acceptance-test-config.yml
@@ -15,6 +15,8 @@ acceptance_tests:
   discovery:
     tests:
       - config_path: "secrets/config.json"
+        backward_compatibility_tests_config:
+          disable_for_version: "1.0.2"
   basic_read:
     tests:
       - config_path: "secrets/config.json"
@@ -31,15 +33,15 @@ acceptance_tests:
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_call_webhook"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
-          - name: "activities_push_leadto_marketo"
+          - name: "activities_push_lead_to_marketo"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_change_revenue_stage"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_dialogue_goal_reached"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
-          - name: "activities_removefrom_opportunity"
+          - name: "activities_remove_from_opportunity"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
-          - name: "activities_received_forwardto_friend_email"
+          - name: "activities_received_forward_to_friend_email"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_open_sales_email"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
@@ -53,7 +55,7 @@ acceptance_tests:
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_click_sales_email"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
-          - name: "activities_sent_forwardto_friend_email"
+          - name: "activities_sent_forward_to_friend_email"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_click_link"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
@@ -63,11 +65,29 @@ acceptance_tests:
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_receive_sales_email"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
-          - name: "activities_replyto_sales_email"
+          - name: "activities_reply_to_sales_email"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
-          - name: "activities_addto_opportunity"
+          - name: "activities_add_to_opportunity"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
           - name: "activities_open_email"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_call_to_action_clicked_in_webinar"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_has_attended_event"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_asks_questions_in_webinar"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_asset_downloads_in_webinar"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_responded_to_a_poll_in_webinar"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_remove_from_list"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_add_to_nurture"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_add_to_list"
+            bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
+          - name: "activities_change_status_in_progression"
             bypass_reason: "Marketo does not provide a way to populate this stream without outside interaction"
         # 52 streams, most of them use BULK API therefore it takes much time to run a sync
         timeout_seconds: 9000
