--- a/.github/workflows/connector_integration_test_single_dagger.yml
+++ b/.github/workflows/connector_integration_test_single_dagger.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Clear pip (temp)
-        run: pip freeze | xargs pip uninstall -y
+        run: pip freeze | grep -v 'git+' | xargs pip uninstall -y
       - name: Install ci-connector-ops package
         run: pip install ./tools/ci_connector_ops\[pipelines]\
       - name: Run airbyte-ci connectors test [WORKFLOW DISPATCH]
