--- a/.github/workflows/connector_integration_test_single_dagger.yml
+++ b/.github/workflows/connector_integration_test_single_dagger.yml
@@ -33,10 +33,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Clear pip (temp)
-        run: pip freeze | grep -v 'git+' | xargs pip uninstall -y
       - name: Install ci-connector-ops package
-        run: pip install ./tools/ci_connector_ops\[pipelines]\
+        run: pip install -e ./tools/ci_connector_ops\[pipelines]\
       - name: Run airbyte-ci connectors test [WORKFLOW DISPATCH]
         if: github.event_name == 'workflow_dispatch'
         run: |
